@@ -1,9 +1,11 @@
 iRedMail-0.8.1:
+    * Add new column 'mailbox.language' in MySQL & PGSQL backends, used by
+      iRedAdmin.
     * Make sure per-user BCC settings have higher priority than per-domain
       settings.
     * Enforce connections over https in Roundcube.
-    * Fix incorrect MySQL user password and databases in MySQL backup script.
     * Fixed:
+        + Incorrect MySQL user password and databases in MySQL backup script.
         + Add missing rotate config for iRedAPD log file on FreeBSD, OpenBSD.
         + Add missing config and SQL table required for sharing IMAP folder to
           anyone. Thanks BigMichi1 <bigmichi1 _at_ bigmichi1.de>.
